--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ APP_NETWORK_NAME=app_network
 APP_BASE_PATH=/usr/local/www/app
 EXPOSE_HTTP_PORT=8008
 
+EXPOSE_RABBITMQ_PORT=5674
+EXPOSE_RABBITMQ_WEB_PORT=15674
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
@@ -24,6 +27,11 @@ SESSION_LIFETIME=120
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+
+RABBITMQ_HOST=local.Laravel.rabbitmq
+RABBITMQ_PORT=5672
+RABBITMQ_USERNAME=guest
+RABBITMQ_PASSWORD=guest
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
