--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "laravel/framework": "^7.29",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "php-amqplib/php-amqplib": "2.12.0",
+        "ext-amqp": "*",
+        "ext-sockets": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
