Install and configure supervisor; run artisan queue in supervisor; create model, repository, migration

--- a/.env.example
+++ b/.env.example
@@ -11,27 +11,29 @@ EXPOSE_RABBITMQ_WEB_PORT=15674
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=main_service
+
+DB_MAIN_SERVICE_HOST=127.0.0.1
+DB_MAIN_SERVICE_DATABASE=main_service
+DB_MAIN_SERVICE_USERNAME=admin
+DB_MAIN_SERVICE_PASSWORD=admin
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+CACHE_DRIVER=redis
+QUEUE_CONNECTION=rabbitmq
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=local.Laravel.redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 RABBITMQ_HOST=local.Laravel.rabbitmq
 RABBITMQ_PORT=5672
-RABBITMQ_USERNAME=guest
-RABBITMQ_PASSWORD=guest
+RABBITMQ_USERNAME=admin
+RABBITMQ_PASSWORD=admin
+
+RABBITMQ_QUEUE=jobs
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
