--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     volumes:
       - ./:${APP_BASE_PATH}/
     environment:
+      - APP_BASE_PATH=${APP_BASE_PATH}
       - XDEBUG_CONFIG=enable=${XDEBUG_ENABLE} \
                        remote_enable=${XDEBUG_REMOTE_ENABLE} \
                        profiler_enable=${XDEBUG_PROFILER_ENABLE} \
