--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,17 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5|^8.0",
+        "ext-amqp": "*",
+        "ext-json": "*",
+        "ext-sockets": "*",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^2.4",
-        "php-amqplib/php-amqplib": "2.12.0",
-        "ext-amqp": "*",
-        "ext-json": "*",
-        "ext-sockets": "*"
+        "maatwebsite/excel": "^3.1",
+        "php-amqplib/php-amqplib": "2.12.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
