Implement rows table; implement progress bars and notifications; configure echo server

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
+    "name": "dpovod/laravel-excel-rabbitmq-redis-demo",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "Laravel Demo Project",
     "keywords": [
         "framework",
         "laravel"
