--- a/docker/php-fpm/config/etc/supervisor/conf.d/queue-work.conf
+++ b/docker/php-fpm/config/etc/supervisor/conf.d/queue-work.conf
@@ -1,12 +1,12 @@
 [program:queue-work]
 process_name=%(program_name)s_%(process_num)02d
 directory=%(ENV_APP_BASE_PATH)s
-command=bash -c "sleep 5 && php artisan queue:work"
+command=bash -c "sleep 5 && php artisan queue:work --sleep=1"
 autostart=true
 autorestart=true
 stderr_logfile=%(ENV_APP_BASE_PATH)s/storage/logs/supervisor/consumers/queue-work.stderr.log
 stdout_logfile=%(ENV_APP_BASE_PATH)s/storage/logs/supervisor/consumers/queue-work.stout.log
 user=www-data
-numprocs=2
+numprocs=5
 stopsignal=TERM
 startretries=5
