--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=LaravelExcelRabbitmqRedisDemo
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -6,23 +6,18 @@ APP_NETWORK_NAME=app_network
 APP_BASE_PATH=/usr/local/www/app
 EXPOSE_HTTP_PORT=8008
 
-EXPOSE_RABBITMQ_PORT=5674
-EXPOSE_RABBITMQ_WEB_PORT=15674
-
 LOG_CHANNEL=stack
 
 DB_CONNECTION=main_service
 
-DB_MAIN_SERVICE_HOST=127.0.0.1
+DB_MAIN_SERVICE_HOST=local.Laravel.db
 DB_MAIN_SERVICE_DATABASE=main_service
 DB_MAIN_SERVICE_USERNAME=root
 DB_MAIN_SERVICE_PASSWORD=root
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=redis
 CACHE_DRIVER=redis
 QUEUE_CONNECTION=rabbitmq
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
 
 REDIS_HOST=local.Laravel.redis
 REDIS_PASSWORD=null
@@ -35,24 +30,16 @@ RABBITMQ_PASSWORD=admin
 
 RABBITMQ_QUEUE=jobs
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+LARAVEL_ECHO_SERVER_PORT=6001
+LARAVEL_ECHO_SERVER_EXPOSE_PORT=6001
+MIX_LARAVEL_ECHO_SERVER_EXPOSE_PORT=6001
+LARAVEL_ECHO_SERVER_REDIS_HOST=local.Laravel.redis
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
-
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+XDEBUG_ENABLE=off
+XDEBUG_REMOTE_ENABLE=on
+XDEBUG_PROFILER_ENABLE=off
+XDEBUG_REMOTE_HOST=0.0.0.0
+XDEBUG_REMOTE_PORT=9000
+XDEBUG_REMOTE_AUTOSTART=on
+XDEBUG_IDE_KEY=PHPSTORM
+XDEBUG_REMOTE_CONNECT_BACK=on
