--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     },
     "dependencies": {
         "bootstrap-vue": "^2.19.0",
+        "laravel-echo": "^1.9.0",
+        "laravel-echo-server": "^1.6.2",
+        "socket.io-client": "^2.3.1",
         "vuejs-noty": "^0.1.3"
     }
 }
